Bug 348946: White box next to URL bar when customizing, B2 stopgap fix. Patch by Dave Townsend (mossop.bugzilla@blueprintit.co.uk) r+a=mconnor

--- a/mozilla/browser/themes/pinstripe/browser/browser.css
+++ b/mozilla/browser/themes/pinstripe/browser/browser.css
@@ -877,7 +877,7 @@ toolbar[iconsize="small"] #paste-button:hover:active {
 }
 
 #wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
-  visibility: hidden;
+  display: none;
 }
 
 /* ----- PAGE PROXY ICON ----- */
