--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -994,7 +994,7 @@ toolbar[iconsize="small"] #paste-button:hover:active {
 }
 
 #wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
-  visibility: hidden;
+  display: none;
 }
 
 /* ::::: page proxy icon ::::: */
